kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: wanderlust
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: saurabh0010/wanderlust-frontend-beta:12
          ports:
            - containerPort: 5173

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: wanderlust
spec:
  type: ClusterIP  # <-- CHANGED from NodePort to ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80            # This is the port your Ingress will use
      targetPort: 5173    # This is the port inside the container
      protocol: TCP
